--- a/client/src/index.css
+++ b/client/src/index.css
@@ -53,8 +53,8 @@
   --primary-foreground: 220 15% 8%;
   
   --neon-cyan: 180 100% 50%;
-  --neon-purple: 270 80% 60%;
-  --neon-pink: 320 85% 65%;
+  --neon-blue: 210 95% 55%;
+  --neon-teal: 170 85% 50%;
   --neon-green: 150 75% 55%;
 
   --secondary: 220 10% 86%;
@@ -76,10 +76,10 @@
   --input: 220 12% 75%;
   --ring: 180 85% 45%;
   --chart-1: 180 92% 35%;
-  --chart-2: 270 75% 42%;
-  --chart-3: 320 80% 45%;
+  --chart-2: 210 85% 45%;
+  --chart-3: 170 80% 40%;
   --chart-4: 150 70% 38%;
-  --chart-5: 35 85% 48%;
+  --chart-5: 200 75% 48%;
 
   --font-sans: "Geist", Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
   --font-serif: Georgia, serif;
@@ -194,14 +194,14 @@
   --input: 220 16% 28%;
   --ring: 180 95% 55%;
   --chart-1: 180 100% 65%;
-  --chart-2: 270 80% 70%;
-  --chart-3: 320 85% 72%;
+  --chart-2: 210 90% 70%;
+  --chart-3: 170 85% 65%;
   --chart-4: 150 75% 65%;
-  --chart-5: 35 90% 68%;
+  --chart-5: 200 85% 68%;
   
   --neon-cyan: 180 100% 50%;
-  --neon-purple: 270 80% 60%;
-  --neon-pink: 320 85% 65%;
+  --neon-blue: 210 95% 55%;
+  --neon-teal: 170 85% 50%;
   --neon-green: 150 75% 55%;
 
   --shadow-2xs: 0px 1px 2px 0px hsl(220 15% 4% / 0.30);
